--- a/apps/express/package.json
+++ b/apps/express/package.json
@@ -15,7 +15,7 @@
     "extends": "../../package.json"
   },
   "dependencies": {
-    "@sentry/node": "^7.109.0",
+    "@sentry/node": "^8.0.0-alpha.9",
     "express": "^4.19.2"
   },
   "devDependencies": {
