--- a/utils/event-proxy-server/package.json
+++ b/utils/event-proxy-server/package.json
@@ -16,8 +16,8 @@
     "clean": "rimraf -g ./node_modules ./build"
   },
   "dependencies": {
-    "@sentry/types": "7.109.0",
-    "@sentry/utils": "7.109.0"
+    "@sentry/types": "8.0.0-alpha.9",
+    "@sentry/utils": "8.0.0-alpha.9"
   },
   "volta": {
     "extends": "../../package.json"
