--- a/utils/event-proxy-server/package.json
+++ b/utils/event-proxy-server/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "version": "8.0.0-alpha.7",
   "name": "event-proxy-server",
   "author": "Sentry",
   "license": "MIT",
@@ -15,8 +16,8 @@
     "clean": "rimraf -g ./node_modules ./build"
   },
   "dependencies": {
-    "@sentry/types": "7.110.1",
-    "@sentry/utils": "7.110.1"
+    "@sentry/types": "8.0.0-alpha.9",
+    "@sentry/utils": "8.0.0-alpha.9"
   },
   "volta": {
     "extends": "../../package.json"
