--- a/apps/koa/package.json
+++ b/apps/koa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-test-application",
+  "name": "koa-test-application",
   "version": "1.0.0",
   "main": "dist/main.js",
   "directories": {
@@ -15,10 +15,12 @@
     "extends": "../../package.json"
   },
   "dependencies": {
+    "@koa/router": "12.0.1",
     "@sentry/node": "^7.110.0",
-    "express": "^4.19.2"
+    "koa": "2.15.3"
   },
   "devDependencies": {
-    "@types/express": "^4"
+    "@types/koa": "2.15.0",
+    "@types/koa__router": "12.0.4"
   }
 }
