--- a/apps/koa/package.json
+++ b/apps/koa/package.json
@@ -16,8 +16,7 @@
   },
   "dependencies": {
     "@koa/router": "12.0.1",
-    "@sentry/node": "7.110.1",
-    "dotenv": "^16.4.5",
+    "@sentry/node": "8.0.0-alpha.9",
     "koa": "2.15.3"
   },
   "devDependencies": {
