add nestjs application

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start:proxy-server": "yarn workspace event-proxy-server run start",
     "start:express": "yarn workspace express-test-application run start",
+    "start:nestjs": "yarn workspace nestjs-test-application run start",
     "start:koa": "yarn workspace koa-test-application run start",
     "fix:prettier": "prettier . --write",
     "fix:lint": "yarn run eslint --fix",
@@ -18,6 +19,7 @@
   "workspaces": [
     "utils/event-proxy-server",
     "apps/express",
+    "apps/nestjs",
     "apps/koa"
   ],
   "devDependencies": {
