--- a/apps/koa/package.json
+++ b/apps/koa/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@koa/router": "12.0.1",
-    "@sentry/node": "8.0.0-alpha.9",
+    "@sentry/node": "8.0.0-beta.1",
     "koa": "2.15.3"
   },
   "devDependencies": {
