--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -18,8 +18,8 @@
     "@nestjs/common": "10.3.7",
     "@nestjs/core": "10.3.7",
     "@nestjs/platform-express": "10.3.7",
-    "@sentry/node": "8.0.0-alpha.9",
-    "@sentry/types": "8.0.0-alpha.9",
+    "@sentry/node": "8.0.0-beta.1",
+    "@sentry/types": "8.0.0-beta.1",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
