--- a/utils/event-proxy-server/package.json
+++ b/utils/event-proxy-server/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "8.0.0-alpha.7",
+  "version": "8.0.0-beta.1",
   "name": "event-proxy-server",
   "author": "Sentry",
   "license": "MIT",
@@ -16,8 +16,8 @@
     "clean": "rimraf -g ./node_modules ./build"
   },
   "dependencies": {
-    "@sentry/types": "8.0.0-alpha.9",
-    "@sentry/utils": "8.0.0-alpha.9"
+    "@sentry/types": "8.0.0-beta.1",
+    "@sentry/utils": "8.0.0-beta.1"
   },
   "volta": {
     "extends": "../../package.json"
