--- a/apps/fastify/package.json
+++ b/apps/fastify/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "koa-test-application",
+  "name": "fastify-test-application",
   "version": "1.0.0",
-  "main": "dist/main.js",
   "directories": {
     "lib": "lib"
   },
@@ -15,12 +14,8 @@
     "extends": "../../package.json"
   },
   "dependencies": {
-    "@koa/router": "12.0.1",
     "@sentry/node": "8.0.0-beta.1",
+    "fastify": "4.26.2",
     "koa": "2.15.3"
-  },
-  "devDependencies": {
-    "@types/koa": "2.15.0",
-    "@types/koa__router": "12.0.4"
   }
 }
