--- a/apps/fastify/package.json
+++ b/apps/fastify/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "@sentry/node": "8.0.0-beta.1",
-    "fastify": "4.26.2",
-    "koa": "2.15.3"
+    "fastify": "4.26.2"
   }
 }
