--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:fastify": "yarn workspace fastify-test-application run start",
     "start:nestjs": "yarn workspace nestjs-test-application run start",
     "start:koa": "yarn workspace koa-test-application run start",
+    "start:nextjs-14_2_1": "yarn workspace nextjs-14_2_1-test-application run dev",
     "fix:prettier": "prettier . --write",
     "fix:lint": "yarn run eslint --fix",
     "lint": "yarn run eslint"
@@ -22,7 +23,8 @@
     "apps/express",
     "apps/fastify",
     "apps/nestjs",
-    "apps/koa"
+    "apps/koa",
+    "apps/nextjs-14_2_1"
   ],
   "devDependencies": {
     "@eslint/js": "^9.0.0",
