--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ web_modules/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -135,5 +136,4 @@ dist
 .DS_Store
 
 # Yalc
-yalc.lock
-.yalc/*
+.yalc
