--- a/apps/koa/package.json
+++ b/apps/koa/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@koa/router": "12.0.1",
-    "@sentry/node": "^7.110.0",
+    "@sentry/node": "7.110.1",
     "koa": "2.15.3"
   },
   "devDependencies": {
