add next 13; align next 14

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:nestjs": "yarn workspace nestjs-test-application run start",
     "start:koa": "yarn workspace koa-test-application run start",
     "start:nextjs-14_2_1": "yarn workspace nextjs-14_2_1-test-application run dev",
+    "start:nextjs-13_2_0": "yarn workspace nextjs-13_2_0-test-application run dev",
     "fix:prettier": "prettier . --write",
     "fix:lint": "yarn run eslint --fix",
     "lint": "yarn run eslint"
@@ -24,6 +25,7 @@
     "apps/fastify",
     "apps/nestjs",
     "apps/koa",
+    "apps/nextjs-13_2_0",
     "apps/nextjs-14_2_1"
   ],
   "devDependencies": {
