--- a/apps/nextjs-13_2_0/tsconfig.json
+++ b/apps/nextjs-13_2_0/tsconfig.json
@@ -4,6 +4,9 @@
   "exclude": ["node_modules"],
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
+    "noEmit": true,
+    "target": "es5",
+    "forceConsistentCasingInFileNames": true,
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -14,15 +17,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
+    "plugins": [{ "name": "next" }],
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"]
-    },
-    "noEmit": true
+    "paths": { "@/*": ["./*"] }
   }
 }
