--- a/apps/express/package.json
+++ b/apps/express/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@sentry/node": "7.110.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
