--- a/apps/koa/package.json
+++ b/apps/koa/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@koa/router": "12.0.1",
     "@sentry/node": "7.110.1",
+    "dotenv": "^16.4.5",
     "koa": "2.15.3"
   },
   "devDependencies": {
