--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -20,6 +20,7 @@
     "@nestjs/platform-express": "10.3.7",
     "@sentry/node": "7.110.1",
     "@sentry/types": "7.110.1",
+    "dotenv": "^16.4.5",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
