--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
   "packageManager": "yarn@4.1.1",
   "scripts": {
     "start:proxy-server": "yarn workspace event-proxy-server run start",
-    "start:express": "yarn workspace express-test-application run start",
-    "start:fastify": "yarn workspace fastify-test-application run start",
-    "start:nestjs": "yarn workspace nestjs-test-application run start",
-    "start:koa": "yarn workspace koa-test-application run start",
-    "start:nextjs-14_2_1": "yarn workspace nextjs-14_2_1-test-application run dev",
-    "start:nextjs-13_2_0": "yarn workspace nextjs-13_2_0-test-application run dev",
+    "start:proxy-server:express": "APP_NAME=express yarn workspace event-proxy-server run start",
+    "start:proxy-server:fastify": "APP_NAME=fastify yarn workspace event-proxy-server run start",
+    "start:proxy-server:nestjs": "APP_NAME=nestjs yarn workspace event-proxy-server run start",
+    "start:proxy-server:koa": "APP_NAME=koa yarn workspace event-proxy-server run start",
+    "start:proxy-server:nextjs-13_2_0": "APP_NAME=nextjs-13_2_0 yarn workspace event-proxy-server run start",
+    "start:proxy-server:nextjs-14_2_1": "APP_NAME=nextjs-14_2_1 yarn workspace event-proxy-server run start",
+    "start:app:express": "yarn workspace express-test-application run start",
+    "start:app:fastify": "yarn workspace fastify-test-application run start",
+    "start:app:nestjs": "yarn workspace nestjs-test-application run start",
+    "start:app:koa": "yarn workspace koa-test-application run start",
+    "start:app:nextjs-14_2_1": "yarn workspace nextjs-14_2_1-test-application run dev",
+    "start:app:nextjs-13_2_0": "yarn workspace nextjs-13_2_0-test-application run dev",
+    "start:express": "run-p start:proxy-server:express start:app:express",
+    "start:fastify": "run-p start:proxy-server:fastify start:app:fastify",
+    "start:nestjs": "run-p start:proxy-server:nestjs start:app:nestjs",
+    "start:koa": "run-p start:proxy-server:koa start:app:koa",
+    "start:nextjs-13_2_0": "run-p start:proxy-server:nextjs-13_2_0 start:app:nextjs-13_2_0",
+    "start:nextjs-14_2_1": "run-p start:proxy-server:nextjs-14_2_1 start:app:nextjs-14_2_1",
     "fix:prettier": "prettier . --write",
     "fix:lint": "yarn run eslint --fix",
     "lint": "yarn run eslint"
@@ -37,6 +49,7 @@
     "eslint": "^9.0.0",
     "globals": "^15.0.0",
     "nodemon": "^3.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.4.4",
