--- a/apps/fastify/package.json
+++ b/apps/fastify/package.json
@@ -14,7 +14,7 @@
     "extends": "../../package.json"
   },
   "dependencies": {
-    "@sentry/node": "7.110.1",
+    "@sentry/node": "8.0.0-beta.3",
     "dotenv": "^16.4.5",
     "fastify": "4.26.2"
   }
