--- a/apps/express/package.json
+++ b/apps/express/package.json
@@ -15,7 +15,7 @@
     "extends": "../../package.json"
   },
   "dependencies": {
-    "@sentry/node": "7.110.1",
+    "@sentry/node": "8.0.0-beta.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
