--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start:proxy-server:nextjs-13_2_0": "APP_NAME=nextjs-13_2_0 yarn workspace event-proxy-server run start",
     "start:proxy-server:nextjs-14_2_1": "APP_NAME=nextjs-14_2_1 yarn workspace event-proxy-server run start",
     "start:proxy-server:sveltekit-2": "APP_NAME=sveltekit-2 yarn workspace event-proxy-server run start",
+    "start:proxy-server:remix": "APP_NAME=remix yarn workspace event-proxy-server run start",
     "start:app:express": "yarn workspace express-test-application run start",
     "start:app:fastify": "yarn workspace fastify-test-application run start",
     "start:app:connect": "APP_NAME=connect yarn workspace connect-test-application run start",
@@ -25,6 +26,7 @@
     "start:app:nextjs-13_2_0": "yarn workspace nextjs-13_2_0-test-application run dev",
     "start:app:nextjs-14_2_1": "yarn workspace nextjs-14_2_1-test-application run dev",
     "start:app:sveltekit-2": "yarn workspace sveltekit-2-test-application run dev",
+    "start:app:remix": "yarn workspace remix-test-application run dev",
     "start:express": "run-p start:proxy-server:express start:app:express",
     "start:fastify": "run-p start:proxy-server:fastify start:app:fastify",
     "start:connect": "run-p start:proxy-server:connect start:app:connect",
@@ -33,6 +35,7 @@
     "start:nextjs-13_2_0": "run-p start:proxy-server:nextjs-13_2_0 start:app:nextjs-13_2_0",
     "start:nextjs-14_2_1": "run-p start:proxy-server:nextjs-14_2_1 start:app:nextjs-14_2_1",
     "start:sveltekit-2": "run-p start:proxy-server:sveltekit-2 start:app:sveltekit-2",
+    "start:remix": "run-p start:proxy-server:remix start:app:remix",
     "fix:prettier": "prettier . --write",
     "fix:lint": "yarn run eslint --fix",
     "lint": "yarn run eslint"
@@ -46,7 +49,8 @@
     "apps/koa",
     "apps/nextjs-13_2_0",
     "apps/nextjs-14_2_1",
-    "apps/sveltekit-2"
+    "apps/sveltekit-2",
+    "apps/remix"
   ],
   "devDependencies": {
     "@eslint/js": "^9.0.0",
