--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "packageManager": "yarn@4.1.1",
   "scripts": {
     "start:proxy-server": "yarn workspace event-proxy-server run start",
+    "start:proxy-server:express_profiling-crons": "APP_NAME=express_profiling-crons yarn workspace event-proxy-server run start",
     "start:proxy-server:express": "APP_NAME=express yarn workspace event-proxy-server run start",
     "start:proxy-server:fastify": "APP_NAME=fastify yarn workspace event-proxy-server run start",
     "start:proxy-server:connect": "APP_NAME=connect yarn workspace event-proxy-server run start",
@@ -18,6 +19,7 @@
     "start:proxy-server:nextjs-14_2_1": "APP_NAME=nextjs-14_2_1 yarn workspace event-proxy-server run start",
     "start:proxy-server:sveltekit-2": "APP_NAME=sveltekit-2 yarn workspace event-proxy-server run start",
     "start:proxy-server:remix": "APP_NAME=remix yarn workspace event-proxy-server run start",
+    "start:app:express_profiling-crons": "yarn workspace express_profiling-crons-test-application run start",
     "start:app:express": "yarn workspace express-test-application run start",
     "start:app:fastify": "yarn workspace fastify-test-application run start",
     "start:app:connect": "APP_NAME=connect yarn workspace connect-test-application run start",
@@ -27,6 +29,7 @@
     "start:app:nextjs-14_2_1": "yarn workspace nextjs-14_2_1-test-application run dev",
     "start:app:sveltekit-2": "yarn workspace sveltekit-2-test-application run dev",
     "start:app:remix": "yarn workspace remix-test-application run dev",
+    "start:express_profiling-crons": "run-p start:proxy-server:express_profiling-crons start:app:express_profiling-crons",
     "start:express": "run-p start:proxy-server:express start:app:express",
     "start:fastify": "run-p start:proxy-server:fastify start:app:fastify",
     "start:connect": "run-p start:proxy-server:connect start:app:connect",
@@ -42,6 +45,7 @@
   },
   "workspaces": [
     "utils/event-proxy-server",
+    "apps/express_profiling-crons",
     "apps/express",
     "apps/fastify",
     "apps/connect",
