--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:proxy-server:fastify": "APP_NAME=fastify yarn workspace event-proxy-server run start",
     "start:proxy-server:connect": "APP_NAME=connect yarn workspace event-proxy-server run start",
     "start:proxy-server:nestjs": "APP_NAME=nestjs yarn workspace event-proxy-server run start",
+    "start:proxy-server:hapi": "APP_NAME=hapi yarn workspace event-proxy-server run start",
     "start:proxy-server:koa": "APP_NAME=koa yarn workspace event-proxy-server run start",
     "start:proxy-server:nextjs-13_2_0": "APP_NAME=nextjs-13_2_0 yarn workspace event-proxy-server run start",
     "start:proxy-server:nextjs-14_2_1": "APP_NAME=nextjs-14_2_1 yarn workspace event-proxy-server run start",
@@ -24,6 +25,7 @@
     "start:app:fastify": "yarn workspace fastify-test-application run start",
     "start:app:connect": "APP_NAME=connect yarn workspace connect-test-application run start",
     "start:app:nestjs": "yarn workspace nestjs-test-application run start",
+    "start:app:hapi": "yarn workspace hapi-test-application run start",
     "start:app:koa": "yarn workspace koa-test-application run start",
     "start:app:nextjs-13_2_0": "yarn workspace nextjs-13_2_0-test-application run dev",
     "start:app:nextjs-14_2_1": "yarn workspace nextjs-14_2_1-test-application run dev",
@@ -34,6 +36,7 @@
     "start:fastify": "run-p start:proxy-server:fastify start:app:fastify",
     "start:connect": "run-p start:proxy-server:connect start:app:connect",
     "start:nestjs": "run-p start:proxy-server:nestjs start:app:nestjs",
+    "start:hapi": "run-p start:proxy-server:hapi start:app:hapi",
     "start:koa": "run-p start:proxy-server:koa start:app:koa",
     "start:nextjs-13_2_0": "run-p start:proxy-server:nextjs-13_2_0 start:app:nextjs-13_2_0",
     "start:nextjs-14_2_1": "run-p start:proxy-server:nextjs-14_2_1 start:app:nextjs-14_2_1",
@@ -50,6 +53,7 @@
     "apps/fastify",
     "apps/connect",
     "apps/nestjs",
+    "apps/hapi",
     "apps/koa",
     "apps/nextjs-13_2_0",
     "apps/nextjs-14_2_1",
