--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/node": "^8.2.5",
-    "@sentry/astro": "7.113.0",
+    "@sentry/astro": "8.0.0-beta.6",
     "astro": "^4.7.0",
     "typescript": "^5.4.5"
   }
