--- a/apps/hapi/package.json
+++ b/apps/hapi/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "21.3.9",
-    "@sentry/node": "8.0.0-beta.6",
+    "@sentry/node": "8.0.0-rc.1",
     "dotenv": "^16.4.5"
   }
 }
