--- a/apps/express/package.json
+++ b/apps/express/package.json
@@ -15,14 +15,11 @@
     "extends": "../../package.json"
   },
   "dependencies": {
-    "@sentry/node": "file:.yalc/@sentry/node",
-    "@sentry/opentelemetry": "file:.yalc/@sentry/opentelemetry",
+    "@sentry/node": "8.0.0-beta.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "ioredis": "^4.28.5"
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "@types/express": "^4",
-    "@types/ioredis": "4.28.10"
+    "@types/express": "^4"
   }
 }
