--- a/apps/express/package.json
+++ b/apps/express/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/app.js",
+    "start": "yarn build && node --require ./dist/instrumentation.js dist/app.js",
     "clean": "npx rimraf node_modules,pnpm-lock.yaml"
   },
   "license": "MIT",
@@ -15,7 +15,7 @@
     "extends": "../../package.json"
   },
   "dependencies": {
-    "@sentry/node": "8.0.0-beta.3",
+    "@sentry/node": "8.0.0-rc.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
