--- a/apps/hapi/package.json
+++ b/apps/hapi/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/app.js",
+    "start": "yarn build && node --require ./dist/instrumentation.js dist/app.js",
     "clean": "npx rimraf node_modules,pnpm-lock.yaml"
   },
   "license": "MIT",
