--- a/apps/nextjs-14_2_1/package.json
+++ b/apps/nextjs-14_2_1/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sentry/nextjs": "8.0.0-beta.3",
+    "@sentry/nextjs": "8.9.2",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
