--- a/apps/koa/package.json
+++ b/apps/koa/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@koa/router": "12.0.1",
-    "@sentry/node": "8.0.0-beta.3",
+    "@sentry/node": "8.9.2",
     "dotenv": "^16.4.5",
     "koa": "2.15.3"
   },
