--- a/apps/connect/package.json
+++ b/apps/connect/package.json
@@ -15,7 +15,7 @@
     "extends": "../../package.json"
   },
   "dependencies": {
-    "@sentry/node": "8.0.0-beta.3",
+    "@sentry/node": "8.9.2",
     "connect": "3.7.0",
     "dotenv": "^16.4.5"
   },
