--- a/apps/express_profiling-crons/package.json
+++ b/apps/express_profiling-crons/package.json
@@ -15,8 +15,8 @@
     "extends": "../../package.json"
   },
   "dependencies": {
-    "@sentry/node": "8.0.0-beta.3",
-    "@sentry/profiling-node": "8.0.0-beta.3",
+    "@sentry/node": "8.9.2",
+    "@sentry/profiling-node": "8.9.2",
     "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
