--- a/apps/sveltekit-2/package.json
+++ b/apps/sveltekit-2/package.json
@@ -11,7 +11,7 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"@sentry/sveltekit": "8.0.0-beta.3"
+		"@sentry/sveltekit": "8.9.2"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
