--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -14,7 +14,7 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
-    "@sentry/remix": "8.0.0-beta.3",
+    "@sentry/remix": "8.9.2",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
