--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start:proxy-server": "yarn workspace event-proxy-server run start",
     "start:proxy-server:express_profiling-crons": "APP_NAME=express_profiling-crons yarn workspace event-proxy-server run start",
+    "start:proxy-server:express_redis-cache": "APP_NAME=express_redis-cache yarn workspace event-proxy-server run start",
     "start:proxy-server:express": "APP_NAME=express yarn workspace event-proxy-server run start",
     "start:proxy-server:fastify": "APP_NAME=fastify yarn workspace event-proxy-server run start",
     "start:proxy-server:connect": "APP_NAME=connect yarn workspace event-proxy-server run start",
@@ -22,6 +23,7 @@
     "start:proxy-server:sveltekit-2": "APP_NAME=sveltekit-2 yarn workspace event-proxy-server run start",
     "start:proxy-server:remix": "APP_NAME=remix yarn workspace event-proxy-server run start",
     "start:app:express_profiling-crons": "yarn workspace express_profiling-crons-test-application run start",
+    "start:app:express_redis-cache": "yarn workspace express_redis-cache-test-application run start",
     "start:app:express": "yarn workspace express-test-application run start",
     "start:app:fastify": "yarn workspace fastify-test-application run start",
     "start:app:connect": "APP_NAME=connect yarn workspace connect-test-application run start",
@@ -34,6 +36,7 @@
     "start:app:sveltekit-2": "yarn workspace sveltekit-2-test-application run dev",
     "start:app:remix": "yarn workspace remix-test-application run dev",
     "start:express_profiling-crons": "run-p start:proxy-server:express_profiling-crons start:app:express_profiling-crons",
+    "start:express_redis-cache": "run-p start:proxy-server:express_redis-cache start:app:express_redis-cache",
     "start:express": "run-p start:proxy-server:express start:app:express",
     "start:fastify": "run-p start:proxy-server:fastify start:app:fastify",
     "start:connect": "run-p start:proxy-server:connect start:app:connect",
@@ -52,6 +55,7 @@
   "workspaces": [
     "utils/event-proxy-server",
     "apps/express_profiling-crons",
+    "apps/express_redis-cache",
     "apps/express",
     "apps/fastify",
     "apps/connect",
