--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -6,7 +6,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
+    "preview": "NODE_OPTIONS='--import ./public/instrument.server.mjs' nuxt preview",
     "postinstall": "nuxt prepare",
     "clean": "npx nuxi cleanup"
   },
