--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start:proxy-server:nestjs": "APP_NAME=nestjs yarn workspace event-proxy-server run start",
     "start:proxy-server:hapi": "APP_NAME=hapi yarn workspace event-proxy-server run start",
     "start:proxy-server:koa": "APP_NAME=koa yarn workspace event-proxy-server run start",
+    "start:proxy-server:browser": "APP_NAME=browser-vanilla yarn workspace event-proxy-server run start",
     "start:proxy-server:astro": "APP_NAME=astro yarn workspace event-proxy-server run start",
     "start:proxy-server:nextjs-13_2_0": "APP_NAME=nextjs-13_2_0 yarn workspace event-proxy-server run start",
     "start:proxy-server:nextjs-14_2_1": "APP_NAME=nextjs-14_2_1 yarn workspace event-proxy-server run start",
@@ -31,6 +32,7 @@
     "start:app:nestjs": "yarn workspace nestjs-test-application run start",
     "start:app:hapi": "yarn workspace hapi-test-application run start",
     "start:app:koa": "yarn workspace koa-test-application run start",
+    "start:app:browser": "yarn workspace browser-test-application run dev",
     "start:app:astro": "yarn workspace astro-test-application run dev",
     "start:app:nextjs-13_2_0": "yarn workspace nextjs-13_2_0-test-application run dev",
     "start:app:nextjs-14_2_1": "yarn workspace nextjs-14_2_1-test-application run dev",
@@ -45,6 +47,7 @@
     "start:nestjs": "run-p start:proxy-server:nestjs start:app:nestjs",
     "start:hapi": "run-p start:proxy-server:hapi start:app:hapi",
     "start:koa": "run-p start:proxy-server:koa start:app:koa",
+    "start:browser": "run-p start:proxy-server:browser start:app:browser",
     "start:astro": "run-p start:proxy-server:astro start:app:astro",
     "start:nextjs-13_2_0": "run-p start:proxy-server:nextjs-13_2_0 start:app:nextjs-13_2_0",
     "start:nextjs-14_2_1": "run-p start:proxy-server:nextjs-14_2_1 start:app:nextjs-14_2_1",
@@ -67,6 +70,7 @@
     "apps/hapi",
     "apps/koa",
     "apps/astro",
+    "apps/browser-vanilla",
     "apps/nextjs-13_2_0",
     "apps/nextjs-14_2_1",
     "apps/nuxt",
